# testing-training

./: .gitignore  LICENSE  Makefile  README.md  fill_with_example_data.py  pyproject.toml
diagrams/: deployment.puml  machine.state.puml  pytest.states.puml  pytest.states.vertical.puml  ui.state.puml
testing_training/: myserial.py
testing_training/legacy_tests/: test_adding.py  test_usd.py  unittest_based.py
testing_training/machine/: config.py  database.py  machine.db
testing_training/machine/buyer_app/: app.py  engines_controller.py  order.py  vending.py
testing_training/machine/buyer_app/templates/: index.html.jinja
testing_training/machine/inventory/: __init__.py  engine.py  services.py  stock.py
testing_training/machine/products/: __init__.py  money.py  product.py  services.py
testing_training/machine/resupplier_app/: app.py
testing_training/machine/resupplier_app/templates/: index.html.jinja
testing_training/terminal/: app.py  test_terminal.py
testing_training/tests/: conftest.py  test_assertions.py  test_commission_calculator.py  test_for_markers.py  test_for_options.py  test_hello_world.py  test_parametrized_naming.py  test_unit_vending_machine.py  test_unit_vending_machine_factory_boy.py
testing_training/tests/machine/buyer_app/: conftest.py  test_db.db  test_engines_controller.py  test_selenium.py  test_vending.py  tools.py
testing_training/tests/machine/inventory/: test_services.py
testing_training/tests/machine/products/: test_services.py
